Bug 147147 - digikam does not apply tags to some selected images
Summary: digikam does not apply tags to some selected images
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Tags-Engine (other bugs)
Version First Reported In: 0.9.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-06-23 23:52 UTC by Luke
Modified: 2012-08-28 16:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2007-06-23 23:52:08 UTC
Version:           0.9.1 (using KDE 3.5.6, Kubuntu (feisty) 4:3.5.6-0ubuntu14)
Compiler:          Target: x86_64-linux-gnu
OS:                Linux (x86_64) release 2.6.20-16-generic

Reminiscent of some other bugs, but I think it's a new one. To reproduce this bug: 
- Select a photo (or group of photos)
- Select another photo (or group) by holding CTRL and dragging a box around it
- Apply a tag via the Comments/Tags tab 
The tag is only applied to the first group that was selected, even though both groups are still selected.
Comment 1 Luke 2007-06-23 23:54:18 UTC
Update: you must assign the tag by checking the tag's checkbox in the Comments/Tags tab. Dragging the tag to the images or assigning the tag by right-clicking does not cause this problem.
Comment 2 caulier.gilles 2007-06-23 23:56:16 UTC
Luke,

I'm not sure, but i think than Marcel have fixed this problem in last 0.9.2 release...

Gilles Caulier
Comment 3 Mikolaj Machowski 2007-06-24 20:37:53 UTC
It wasn't fixed - confirming it.

Really weird bug. Second group isn't tagged only when it was selected by
dragging mouse over several images holding Ctrl. If images from second
(and next) group were selected individually all images are tagged. If
they were selected by mouse dragging only first group is tagged.
Comment 4 caulier.gilles 2007-06-24 21:03:56 UTC
Marcel,

I think this bug must be fixed for next 0.9.3 bugfix release. It's important.
What you think about ?

Gilles
Comment 5 Marcel Wiesweg 2007-06-26 19:16:46 UTC
SVN commit 680604 by mwiesweg:

Emit signalSelectionchanged after selecting all items under the rubber band.
While selecting the individual items, signals are blocked.

BUG: 147147


 M  +3 -0      iconview.cpp  


--- branches/extragear/kde3/graphics/digikam/digikam/iconview.cpp #680603:680604
@@ -1186,6 +1186,9 @@
     p.end();
 
     d->pressedMoved = true;
+
+    if (changed)
+        emit signalSelectionChanged();
 }
 
 void IconView::contentsMouseReleaseEvent(QMouseEvent* e)