Emit signalSelectionchanged after selecting all items under the rubber band. While selecting the individual items, signals are blocked.

BUG: 147147

svn path=/branches/extragear/kde3/graphics/digikam/; revision=680604