digikam/iconview.cpp
@@ -1186,6 +1186,9 @@ void IconView::contentsMouseMoveEvent(QMouseEvent* e)
     p.end();
 
     d->pressedMoved = true;
+
+    if (changed)
+        emit signalSelectionChanged();
 }
 
 void IconView::contentsMouseReleaseEvent(QMouseEvent* e)
